# ndk

./: .gitignore  .test-repo-sss  Android.mk  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Call of Duty  Changelog-r15-beta1.md  Changelog-r15.md  GNUmakefile  Home.md  JNI.md  NDK-Release-Process.md  OWNERS  README.TXT  README.md  SECURITY.md  Unsupported-Downloads.md  _Sidebar.md  adb  build-libcxx.sh  build-libcxxabi.sh  checkbuild.py  checkbuild.sh  config.py  documentation.html  find-ndk-root-win-host.cmd  find-win-host.cmd  gdbrunner  groups  ndk-bc2native-py  ndk-bc2native.py  ndk-build  ndk-build.cmd  ndk-gdb  ndk-gdb-py  ndk-gdb-py.cmd  ndk-gdb.cmd  ndk-gdb.py  ndk-which  (+4 more)
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 000-llvm.yml  100-bug-report.yml  200-documentation-bug.yml  android-studio-and-gradle-issues.md  bug-report.md  bug-report.yml  config.yml  documentation-bug.md  documentation-bug.yml  feature-request.yml  llvm.yml  question.md
Changelogs/: Changelog-r11c.md  Changelog-r12-beta1.md  Changelog-r12-beta2.md  Changelog-r12.md  Changelog-r13-beta1.md  Changelog-r13.md  Changelog-r14-beta1.md  Changelog-r14-beta2.md  Changelog-r14.md  Changelog-r15-beta2.md  Changelog-r15.md  Changelog-r16-beta1.md  Changelog-r16-beta2.md  Changelog-r16.md  Changelog-r17-beta1.md  Changelog-r17-beta2.md  Changelog-r17.md  Changelog-r18-beta1.md  Changelog-r18.md  Changelog-r19-beta1.md  Changelog-r19-beta2.md  Changelog-r19.md  Changelog-r20-beta1.md  Changelog-r20-beta2.md  Changelog-r20-beta3.md  Changelog-r20.md  Changelog-r21.md
android_support/: Android.mk  README
android_support/tests/: ctype_unittest.cc  run-host.sh  wchar_unittest.cc
apps/native-activity/: Application.mk
docs/: ANDROID-ATOMICS.html  ANDROID-MK.TXT  ANDROID-MK.html  APPLICATION-MK.TXT  APPLICATION-MK.html  CHANGES.TXT  CHANGES.html  CPLUSPLUS-SUPPORT.html  CPU-ARCH-ABIS.TXT  CPU-ARCH-ABIS.html  CPU-ARM-NEON.TXT  CPU-ARM-NEON.html  CPU-FEATURES.TXT  CPU-FEATURES.html  CPU-MIPS.html  CPU-X86.html  Change_Log.html  DEVELOPMENT.TXT  DEVELOPMENT.html  GeneratingSysroots.md  HOWTO.TXT  HardFloatAbi.md  IMPORT-MODULE.TXT  IMPORT-MODULE.html  INSTALL.TXT  LICENSES.html  NATIVE-ACTIVITY.HTML  NDK-BUILD.TXT  NDK-BUILD.html  NDK-DEPENDS.html  NDK-GDB.TXT  NDK-GDB.html  NDK-STACK.html  OVERVIEW.TXT  OVERVIEW.html  PREBUILTS.TXT  PREBUILTS.html  README.md  STABLE-APIS.TXT  STABLE-APIS.html  (+9 more)
docs/openmaxal/: index.html
docs/opensles/: index.html
docs/renderscript/: RenderScript_8h_source.html  classandroid_1_1RSC_1_1Allocation.html  classandroid_1_1RSC_1_1BaseObj.html  classandroid_1_1RSC_1_1Byte2.html  classandroid_1_1RSC_1_1Byte3.html  classandroid_1_1RSC_1_1Byte4.html  classandroid_1_1RSC_1_1Double2.html  classandroid_1_1RSC_1_1Double3.html  classandroid_1_1RSC_1_1Double4.html  classandroid_1_1RSC_1_1Element.html  classandroid_1_1RSC_1_1Element_1_1Builder.html  classandroid_1_1RSC_1_1FieldPacker.html  classandroid_1_1RSC_1_1Float2.html  classandroid_1_1RSC_1_1Float3.html  classandroid_1_1RSC_1_1Float4.html  classandroid_1_1RSC_1_1Int2.html  classandroid_1_1RSC_1_1Int3.html  classandroid_1_1RSC_1_1Int4.html  classandroid_1_1RSC_1_1Long2.html  classandroid_1_1RSC_1_1Long3.html  (+39 more)
docs/tools/: README  (+1 more)
samples/: README.md
scripts/: gen_release_table.py
sources/host-tools/sed-4.2.1/: AUTHORS  BUGS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README-alpha  README.boot  THANKS  aclocal.m4  autoboot  basicdefs.h  bootstrap.sh  bootstrap.sh.in  config_h.in  configure  configure.ac
sources/host-tools/sed-4.2.1/build-aux/: texi2dvi  texinfo.tex
sources/host-tools/sed-4.2.1/doc/: Makefile.am  Makefile.in  config.texi  groupify.sed  sed-in.texi  sed.1  sed.info  sed.texi  sed.x  version.texi
sources/host-tools/sed-4.2.1/lib/: Makefile.am  Makefile.in  acl-internal.h  acl.h  acl_entries.c  alloca.c  alloca.in.h  btowc.c  c-ctype.c  c-ctype.h  config.charset  copy-acl.c  errno.in.h  getdelim.c  getline.c  getopt1.c  getpagesize.c  gettext.h  gettimeofday.c  gnulib.mk  localcharset.c  localcharset.h  lstat.c  malloc.c  mbrlen.c  mbrtowc.c  mbsinit.c  memchr.c  mkstemp.c  obstack.c  obstack.h  pathmax.h  quote.c  quote.h  quotearg.c  quotearg.h  realloc.c  ref-add.sin  ref-del.sin  regcomp.c  (+28 more)
sources/host-tools/sed-4.2.1/m4/: acl.m4  alloca.m4  btowc.m4  double-slash-root.m4  getdelim.m4  getline.m4  getpagesize.m4  gettext.m4  gettimeofday.m4  gnulib-comp.m4  inline.m4  localcharset.m4  locale-fr.m4  locale-ja.m4  locale-zh.m4  lstat.m4  mbrlen.m4  mbrtowc.m4  mbsinit.m4  memchr.m4  mmap-anon.m4  quote.m4  quotearg.m4  realloc.m4  regex.m4  rename.m4  selinux-context-h.m4  selinux-selinux-h.m4  strndup.m4  strnlen.m4  strverscmp.m4  sys_stat_h.m4  tempname.m4  wcrtomb.m4  wctob.m4  wctype.m4
sources/host-tools/sed-4.2.1/po/: ChangeLog  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  af.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  he.po  hr.po  hu.po  id.gmo  id.po  it.po  ja.po  ko.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sed.pot  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  (+3 more)
sources/host-tools/sed-4.2.1/sed/: Makefile.am  Makefile.in  compile.c  execute.c  fmt.c  mbcs.c  regexp.c  sed.c  sed.h  utils.c  utils.h
sources/host-tools/sed-4.2.1/testsuite/: 0range.inp  0range.sed  8bit.good  8bit.inp  8bit.sed  8to7.good  8to7.sed  Makefile.am  Makefile.in  Makefile.tests  SPENCER.tests  allsub.good  allsub.inp  allsub.sed  appquit.good  appquit.inp  appquit.sed  badenc.inp  badenc.sed  binary.good  binary.inp  binary.sed  binary2.sed  binary3.sed  bkslashes.good  bkslashes.sed  brackets.good  brackets.inp  brackets.sed  bsd.good  bsd.sh  bug-regex10.c  bug-regex11.c  bug-regex12.c  bug-regex13.c  bug-regex14.c  bug-regex15.c  bug-regex16.c  bug-regex21.c  bug-regex27.c  (+138 more)
stl/: Android.mk
tests/: .gitignore  README  adb.py  check-release.sh  filters.py  ndk.py  prepare-buildbot-emulators.py  printers.py  run-all.py  run-libcxx.sh  run-standalone-tests.sh  run-tests-all.sh  run-tests.sh  runners.py  test_filters.py  tests.py  util.py  validate.py
(+1175 files in other folders)
